--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 asgiref==3.4.1
 Django==3.2.5
 django-crispy-forms==1.12.0
+django-environ==0.4.5
 pytz==2021.1
 sqlparse==0.4.1
 whitenoise==4.1.3
+dj-database-url==0.5.0
